--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 		<mule.version>3.9.0</mule.version>
     	<mule.tools.version>1.2</mule.tools.version>
     	<uid>nicolaskosacoff</uid>
-    	<pwd></pwd>
+    	<pwd/>
 	</properties>
 
 	<build>
@@ -160,6 +160,12 @@
     <dependency>
             <groupId>org.mule.modules</groupId>
             <artifactId>mule-module-spring-config</artifactId>
+            <version>${mule.version}</version>
+            <scope>provided</scope>
+        </dependency>
+    <dependency>
+            <groupId>com.mulesoft.weave</groupId>
+            <artifactId>mule-plugin-weave</artifactId>
             <version>${mule.version}</version>
             <scope>provided</scope>
         </dependency>
