--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,24 @@
 					</execution>
 				</executions>
 			</plugin>
+			
+			<plugin>
+			    <groupId>com.mulesoft.services</groupId>
+			  	<artifactId>mule-validation-maven-plugin</artifactId>
+			  	<version>1.0-SNAPSHOT</version>
+			  	<configuration>
+			  	    <rulesPath>/Users/nicolas.kosacoff/validation-tool/rules-path</rulesPath>
+			  		<rulesPattern>^apps-rules(.*).xml</rulesPattern>
+			  	</configuration>
+			  	<executions>
+			  	    <execution>
+			  		    <phase>compile</phase>
+			  			<goals>
+			  			    <goal>validate</goal>
+			  			</goals>
+			  		</execution>
+			  	</executions>
+			</plugin>
 
 		</plugins>
 	</build>
